force-app/main/default/objects/Trustee_Payment_Followup_Setting__c/Trustee_Payment_Followup_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Trustee Payment Followup Setting</label>
</CustomObject>