force-app/main/default/objects/Trustee_Payment_Followup_Setting__c/fields/Additional_Follow_up_After_X_Months__c.field-meta.xml
<CustomField>
    <fullName>Additional_Follow_up_After_X_Months__c</fullName>
    <description>The value in this field will be used to do second follow-up after the mentioned number of months</description>
    <label>Additional Follow-up After X Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>