force-app/main/default/objects/Trustee_Payment_Followup_Setting__c/fields/Follow_up_Max_Limit__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Max_Limit__c</fullName>
    <description>The value in this field will be used to decide on how many follow-ups needs to be made</description>
    <label>Follow-up Max Limit</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>