force-app/main/default/objects/Trustee_Payment_Followup_Setting__c/fields/Maximum_Emails_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Emails_Per_Day__c</fullName>
    <label>Maximum Emails Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>